{
    "name": "PlayerController",
    "maps": [
        {
            "name": "TouchMap",
            "id": "72c008ce-aa7e-4a51-bba2-d8c831af29ac",
            "actions": [
                {
                    "name": "PrimaryContactAction",
                    "type": "PassThrough",
                    "id": "6d0de3ce-2d39-47f3-977c-3cf7913e3b35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouchPosition",
                    "type": "Value",
                    "id": "9d46f6eb-511d-4268-9d1e-35a8389e43e9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7ddd7df-a9a4-4bb6-9973-df136e179a69",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContactAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bf8ee63-ef67-45c9-bb26-7e36b02b9a00",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}